# rack-planner

./: CONTRIBUTING_AI.md  INDEX.md  Makefile  README.md  SECURITY.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  schemas.py
backend/rack_planner/: __init__.py  app.py  module_manager.py  schemas.py
backend/rack_planner/modules/network-expansion/: devices.json  module.json
backend/tests/: test_api.py  test_device_library.py
data/devices/: default_devices.json  example_devices.json
data/inventory/: current_lab.yaml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  architecture.md  contributing.md  test_plan.md
docs/data/inventory/: current_lab.yaml
docs/docs/: architecture.md  project-plan.md
docs/tasks/: T001-backend-validation-v2.md  T002-frontend-drag-drop.md  T003-threejs-viewer.md  TEMPLATE.md
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/components/: DeviceLibrary.jsx  RackDesigner.jsx  RackView.jsx
schemas/: device.schema.json
