[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rack-planner-backend"
version = "0.1.0"
description = "FastAPI backend for the Rack-Planner project"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Rack-Planner Contributors" }]
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.25",
  "pydantic>=2,<3",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "httpx>=0.27",
  "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rack_planner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
